- Config elements created for editmode - Added headers to search result - Headers can now click to go to details

--- a/ClientApp/src/app/components/search/search.component.html
+++ b/ClientApp/src/app/components/search/search.component.html
@@ -8,8 +8,7 @@
             matInput
             placeholder="Type your search term"
             [(ngModel)]="searchTerm"
-            [matAutocomplete]="auto"
-            (keyup)="onSearch()">
+            [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
         </mat-autocomplete>
         </mat-form-field>
