--- a/ClientApp/src/app/components/header/header.component.html
+++ b/ClientApp/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" (click)="onClick()">
     <p>eventid</p>
     <img [src]="header?.imageUrl" alt="Header Image">
     <ng-content></ng-content>
