--- a/ClientApp/src/app/components/venue-navbar/venue-navbar.component.html
+++ b/ClientApp/src/app/components/venue-navbar/venue-navbar.component.html
@@ -1,4 +1,5 @@
 <app-navbar>
     <li><a><a routerLink="your-venue" routerLinkActive="active">Your Venue</a></a></li>
+    <li><a><a routerLink="find" routerLinkActive="active">Find an Artist</a></a></li>
     <li><a><a routerLink="" routerLinkActive="active">Back to Customer Page</a></a></li>
 </app-navbar>
