--- a/ClientApp/src/app/pages/find/find.component.html
+++ b/ClientApp/src/app/pages/find/find.component.html
@@ -1,2 +1,11 @@
-<app-search (search)="handleSearch($event)" [searchType]="searchType"></app-search>
+<app-search (search)="handleSearch($event)" [headerType]="headerType"></app-search>
+<button mat-raised-button class="filter-button" (click)="toggleFilter()">
+    <mat-icon>filter_list</mat-icon> Filters
+  </button>
 <app-search-results *ngIf="headers.length>0" [headers]="headers"></app-search-results>
+<app-filter 
+  class="filter-panel" 
+  [isOpen]="filterOpen"
+  (close)="toggleFilter()" 
+  (applyFilters)="applyFilters($event)">
+</app-filter>
