--- a/ClientApp/src/app/components/profile/profile.component.html
+++ b/ClientApp/src/app/components/profile/profile.component.html
@@ -13,6 +13,6 @@
           </button>
     </mat-menu>
 } @else {
-    <a routerLink="/login">Log in</a> / <a routerLink="/login">Register</a>
+    <a routerLink="/login">Log in</a> / <a routerLink="/register">Register</a>
 }
 
