Some of the Create Venue/Artist component complete

--- a/ClientApp/src/app/components/config/heading-medium/heading-medium.component.html
+++ b/ClientApp/src/app/components/config/heading-medium/heading-medium.component.html
@@ -1,5 +1,8 @@
 @if(editMode) {
-    <input type="text" [(ngModel)]="content">
+    <div class="container">
+        <label>{{ label }}</label>
+        <input type="text" [(ngModel)]="content">
+    </div>
 }@else {
     <h3>{{ content }}</h3>
 }
