--- a/ClientApp/src/app/components/config/location/location.component.html
+++ b/ClientApp/src/app/components/config/location/location.component.html
@@ -1,3 +1,4 @@
-<app-text [editMode]="editMode" [content]="county"/>
-<app-text [editMode]="editMode" [content]="town"/>
+
+<app-text [editMode]="editMode" [label]="'County'" [content]="county"/>
+<app-text [editMode]="editMode" [label]="'Town'" [content]="town"/>
 <app-google-maps/>
