--- a/ClientApp/src/app/components/listings/listings.component.html
+++ b/ClientApp/src/app/components/listings/listings.component.html
@@ -17,11 +17,11 @@
                     <li *ngFor="let genre of listing.genres">{{genre}}</li>
                 </ul>
             </td>
-            <td *ngIf="authService.isRole('VenueManager')">
+            <td *ngIf="authService.isRole('VenueManager') && editMode">
                 <button class="btn-delete" (click)="onDelete(listing)">Delete</button>
             </td>
-            <td *ngIf="authService.isRole('Artist')">
-                <button class="btn-apply" (click)="onDelete(listing)">Apply</button>
+            <td *ngIf="authService.isRole('ArtistManager')">
+                <button class="btn-apply" (click)="onApply(listing)">Apply</button>
             </td>
         </tr>
     </tbody>
