--- a/ClientApp/src/app/components/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="container">
-    <mat-sidenav #sidenav mode="side" opened position="end">
+    <mat-sidenav #sidenav mode="side" position="end">
         <ng-content select="[sidebar]"></ng-content>
         <button class="btn-close" mat-icon-button (click)="sidenav.toggle()">
             <mat-icon fontIcon="close"></mat-icon>
