Message send & mailbox Component started creation

--- a/ClientApp/src/app/components/navbar/navbar.component.html
+++ b/ClientApp/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,9 @@
         <ul>
             <ng-content></ng-content>
             <li>
+                <app-mailbox></app-mailbox>
+            </li>
+            <li>
                 <app-profile></app-profile>
             </li>
         </ul>
