--- a/ClientApp/src/app/components/profile/profile.component.html
+++ b/ClientApp/src/app/components/profile/profile.component.html
@@ -1,18 +1,28 @@
 @if (authService.currentUser$ | async; as user) {
+    <!-- Profile Button (Triggers the Menu) -->
     <button class="btn-profile" mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon [matMenuTriggerFor]="menu" fontIcon="account_circle">more_vert</mat-icon>
+        <mat-icon fontIcon="account_circle">more_vert</mat-icon>
     </button>
+
     <mat-menu #menu="matMenu">
+        <div class="info">
+            <mat-icon fontIcon="account_circle"></mat-icon>
+            <div class="details">
+                <h4>{{ user.email }}</h4>
+                <p>Role: {{user.role}}</p>
+            </div>
+        </div>
+        <mat-divider></mat-divider>
+
         <button mat-menu-item (click)="onEditProfile()">
             <mat-icon fontIcon="edit"></mat-icon>
-            Edit Profile
-          </button>
-          <button mat-menu-item (click)="onLogOut()">
+            <span>Edit Profile</span>
+        </button>
+        <button mat-menu-item (click)="onLogOut()">
             <mat-icon fontIcon="logout"></mat-icon>
-            Logout
-          </button>
+            <span>Logout</span>
+        </button>
     </mat-menu>
 } @else {
     <a routerLink="/login">Log in</a> / <a routerLink="/register">Register</a>
 }
-
