--- a/ClientApp/src/app/components/customer-navbar/customer-navbar.component.html
+++ b/ClientApp/src/app/components/customer-navbar/customer-navbar.component.html
@@ -1,7 +1,6 @@
 <app-navbar>
     <li *ngIf="this.authService.isRole('VenueManager')"><a routerLink="/venue">Venue Page</a></li>
     <li *ngIf="this.authService.isRole('ArtistManager')"><a routerLink="/artist">Artist Page</a></li>
-    <li><a><a routerLink="/local-events" routerLinkActive="active">Local Events</a></a></li>
-    <li><a><a routerLink="/artists" routerLinkActive="active">Find Artists</a></a></li>
+    <li><a><a routerLink="/find" routerLinkActive="active">Find Events/Artists/Venues</a></a></li>
     <li><a><a routerLink="/partner" routerLinkActive="active">Partner with Us!</a></a></li>
 </app-navbar>
