--- a/ClientApp/src/app/components/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,12 @@
-<mat-sidenav-container class="container">
-    <mat-sidenav #sidenav mode="side" position="end">
+<mat-sidenav-container class="container" [hasBackdrop]="false">
+    <mat-sidenav #sidenav mode="over" position="end">
         <ng-content select="[sidebar]"></ng-content>
         <button class="btn-close" mat-icon-button (click)="sidenav.toggle()">
             <mat-icon fontIcon="close"></mat-icon>
         </button>
     </mat-sidenav>
     <mat-sidenav-content>
+        <!-- main content -->
         <button *ngIf="!sidenav.opened" class="btn-toggle" mat-icon-button (click)="sidenav.toggle()">
             <mat-icon class="btn-open" fontIcon="tune"></mat-icon>
         </button>
