--- a/ClientApp/src/app/pages/find/find.component.html
+++ b/ClientApp/src/app/pages/find/find.component.html
@@ -1,5 +1,5 @@
 <app-filter>
-  <div>
+  <div class="container">
     <app-search (search)="handleSearch($event)" [headerType]="headerType"></app-search>
     <app-search-results *ngIf="headers.length > 0" [headers]="headers"></app-search-results>
   </div>
