--- a/ClientApp/src/app/components/header/header.component.html
+++ b/ClientApp/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="container" (click)="onClick()">
-    <p>eventid</p>
+    <p>test</p>
     <img [src]="header?.imageUrl" alt="Header Image">
     <ng-content></ng-content>
 </div>
