--- a/ClientApp/src/app/components/headers/headers.component.scss
+++ b/ClientApp/src/app/components/headers/headers.component.scss
@@ -1,7 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    justify-content: end;
     align-items: start;
     gap: 10px; //10px gap between each grid item
 }
