--- a/ClientApp/src/app/components/config/location/location.component.html
+++ b/ClientApp/src/app/components/config/location/location.component.html
@@ -1,5 +1,5 @@
 
-<div class="wrapper">
+<div class="wrapper" *ngIf="county && town">
     <mat-icon class="icon">location_on</mat-icon>
     <p>{{county}}</p>
     <span>,</span>
