--- a/ClientApp/src/app/components/config-navbar/config-navbar.component.html
+++ b/ClientApp/src/app/components/config-navbar/config-navbar.component.html
@@ -1,10 +1,13 @@
 <nav class="config-header-container">
     <div class="config-header-content">
         <ul>
+            <li><button class="btn-save" mat-fab extended (click)="onCancel()">
+                <mat-icon fontIcon="cancel"></mat-icon>Cancel
+            </button></li>
             <li><button class="btn-edit" mat-fab extended (click)="onEditModeChange()">
                 <mat-icon fontIcon="edit"></mat-icon>Edit
             </button></li>
-            <li><button class="btn-save" mat-fab extended [disabled]="!editMode">
+            <li><button class="btn-save" mat-fab extended [disabled]="editMode || !saveable" (click)="onSave()">
                 <mat-icon fontIcon="save"></mat-icon>Save
             </button></li>
         </ul>
