--- a/ClientApp/src/app/components/config/heading-medium/heading-medium.component.html
+++ b/ClientApp/src/app/components/config/heading-medium/heading-medium.component.html
@@ -1,7 +1,7 @@
 @if(editMode) {
     <div class="container">
-        <label>{{ label }}</label>
-        <input type="text" [(ngModel)]="content" required>
+        <label *ngIf="label" class="label">{{ label }}</label>
+        <input type="text" [(ngModel)]="content" (ngModelChange)="onContentChange($event)">
     </div>
 }@else {
     <h3>{{ content }}</h3>
