--- a/ClientApp/src/app/pages/my-venue/my-venue.component.html
+++ b/ClientApp/src/app/pages/my-venue/my-venue.component.html
@@ -1,6 +1,6 @@
 @if (venue) {
-    <app-config-navbar (editModeChange)="onEditModeChange($event)"></app-config-navbar>
-    <app-venue-details *ngIf="venue" [venue]="venue" [editMode]="editMode"></app-venue-details>
+    <app-config-navbar (editModeChange)="onEditModeChange($event)" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
+    <app-venue-details *ngIf="venue" [venue]="venue" [editMode]="editMode" (changeDetected)="onChangeDetected()"></app-venue-details>
 } @else {
     <app-manager-item-not-found [itemName]="'venue'"/>
 }
