--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -3,9 +3,9 @@
     <div class="container" *ngIf="entity">
         <section [id]="navItems[0].fragment">
             <h1>{{navItems[0].name}}</h1>
-            <app-heading-medium [editMode]="editMode" [content]="venue.name"/>
-            <app-text [editMode]="editMode" [label]="'About'" [content]="venue.about"/>
-            <app-image [editMode]="editMode" [src]="venue.imageUrl" [alt]="'Venue Image'"/>
+            <app-heading-medium [editMode]="editMode" label="Name" [content]="venue.name" (contentChange)="updateContent($event, 'name')"/>
+            <app-textarea [editMode]="editMode" label="About" [content]="venue.about" (contentChange)="updateContent($event, 'about')"/>
+            <app-image [editMode]="editMode" [src]="venue.imageUrl" alt="Venue Image" (imageChange)="updateImage($event)"/>
         </section>
 
         <section [id]="navItems[1].fragment">
