--- a/ClientApp/src/app/components/auth-layout/auth-layout.component.scss
+++ b/ClientApp/src/app/components/auth-layout/auth-layout.component.scss
@@ -1,20 +1,20 @@
 .auth-container {
     display: flex;
-    height: 100vh; /* Full viewport height */
+    height: 100vh; 
   }
   
   .image-section {
-    flex: 1; /* 50% width */
+    flex: 1; 
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f4f4f4; /* Optional background */
+    background-color: #f4f4f4; 
   }
   
   .image-section img {
-    max-width: 100%;
+    width: 100%;
     max-height: 100%;
-    object-fit: cover; /* Ensures the image fills its container */
+    object-fit: cover;
   }
   
   .form-section {
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff; /* Optional background */
+    background-color: #fff; 
     padding: 20px;
   }
 
