- Created Stripe webhook to allow for 3d payments to work - Started on blob storage

--- a/ClientApp/src/app/pages/event-details/event-details.component.html
+++ b/ClientApp/src/app/pages/event-details/event-details.component.html
@@ -39,7 +39,7 @@
                 <mat-icon>monetization_on</mat-icon> 
                 {{ event.price | currency: 'GBP':'symbol' }}
             </p>
-            <button class="btn-buy">Buy Tickets</button>
+            <button class="btn-buy" (click)="onBuyClick()">Buy Tickets</button>
         </div>
         
     </div>
