--- a/ClientApp/src/app/components/event-header/event-header.component.html
+++ b/ClientApp/src/app/components/event-header/event-header.component.html
@@ -1,3 +1,5 @@
 <app-header [header]="header" [headerType]="headerType">
-    <p>event content</p>
+    <span><mat-icon>calendar_today</mat-icon>
+        {{ header?.startDate | date: 'd MMM' }} {{ header?.startDate | date: 'HH:mm' }} - 
+        {{ header?.endDate | date: 'HH:mm' }}</span>
 </app-header>
