--- a/ClientApp/src/app/components/header/header.component.html
+++ b/ClientApp/src/app/components/header/header.component.html
@@ -1,5 +1,10 @@
 <div class="container" (click)="onClick()">
-    <p>test</p>
-    <img [src]="header?.imageUrl" alt="Header Image">
+    <h3>{{header?.name}}</h3>
+    <img 
+        [src]="blobStorageService.getUrl(header?.imageUrl)" 
+        alt="Header Image"
+        width="200"
+        height="200">
+    <p><mat-icon>location_on</mat-icon> {{ header?.county }}, {{ header?.town }}</p>
     <ng-content></ng-content>
 </div>
