--- a/ClientApp/src/app/pages/event-details/event-details.component.html
+++ b/ClientApp/src/app/pages/event-details/event-details.component.html
@@ -9,7 +9,7 @@
             </section>
             <section [id]="navItems[1].fragment">
                 <h1>{{navItems[1].name}}</h1>
-                <img [src]="event.venue.imageUrl" />
+                <img width="200" [src]="blobStorageService.getUrl(event.venue.imageUrl)" />
                 <app-location
                     [coordinates]="event.venue.coordinates"
                     [county]="event.venue.county"
@@ -24,7 +24,7 @@
         </div>
         <div class="sticky-summary">
             <h3>{{ event.name }}</h3>
-            <app-image [editMode]="editMode" [src]="event.artist.imageUrl" [alt]="'Artist Image'"></app-image>
+            <!-- <app-image [editMode]="editMode" [src]="event.artist.imageUrl" [alt]="'Artist Image'"></app-image> -->
             <p>
                 <mat-icon>calendar_today</mat-icon>
                 {{ event.startDate | date: 'd MMM' }} {{ event.startDate | date: 'HH:mm' }} - 
