--- a/ClientApp/src/app/pages/artist-details/artist-details.component.html
+++ b/ClientApp/src/app/pages/artist-details/artist-details.component.html
@@ -25,6 +25,7 @@
 
         <section [id]="navItems[2].fragment">
             <h2 class="reviews">Reviews</h2>
+            <app-review-summary [item]="artist"></app-review-summary>
         </section>
     </div>
 }@else {
