- Added more accurate latlong location based search

--- a/ClientApp/src/app/components/config/location/location.component.html
+++ b/ClientApp/src/app/components/config/location/location.component.html
@@ -5,4 +5,4 @@
     <span>,</span>
     <p>{{town}}</p>
 </div>
-<app-google-maps [editMode]="editMode" [lat]="coordinates?.latitude" [lng]="coordinates?.longitude" (coordinatesChange)="onCoordinatesChange($event)" />
+<app-google-maps [editMode]="editMode" [lat]="latitude" [lng]="longitude" (coordinatesChange)="onCoordinatesChange($event)" />
