--- a/ClientApp/src/app/components/filter/filter.component.html
+++ b/ClientApp/src/app/components/filter/filter.component.html
@@ -1,25 +1,79 @@
 <app-sidebar [icon]="icon" class="container">
   <div sidebar>
-    <h3>Filter Content</h3>
-    <div class="header-type" *ngIf="isCustomerRoute()">
-      <select [(ngModel)]="headerType" (change)="onHeaderTypeChange()">
-        <option *ngFor="let type of headerTypes" [value]="type">{{ type }}</option>
-      </select>
-    </div>
-    <div class="genre-selection" *ngIf="headerType === 'artist' || headerType === 'event'">
-      <select [(ngModel)]="selectedGenre">
-        <option *ngFor="let genre of genres" [ngValue]="genre">{{ genre.name }}</option>
-      </select>
-      <button (click)="addGenre()" class="add-genre-btn">+</button>
-
-      <div class="selected-genres">
-        <span *ngFor="let genre of selectedGenres" class="genre-tag">
-          {{ genre.name }} 
-          <button (click)="removeGenre(genre)">x</button>
-        </span>
+    <div class="wrapper">
+      <h3>Filter Content</h3>
+      <div class="header-type" *ngIf="isCustomerRoute()">
+        <mat-form-field appearance="outline" class="custom-select">
+          <mat-label>Header Type</mat-label>
+          <mat-select [(value)]="headerType" (selectionChange)="onHeaderTypeChange()">
+            <mat-option *ngFor="let type of headerTypes" [value]="type">
+              {{ type }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
+  
+      <div class="genre-selection" *ngIf="headerType === 'artist' || headerType === 'event'">
+        <mat-form-field appearance="outline" class="custom-select">
+          <mat-label>Select Genre</mat-label>
+          <mat-select [(value)]="selectedGenre">
+            <mat-option *ngFor="let genre of genres" [value]="genre">
+              {{ genre.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+  
+        <button mat-icon-button color="primary" (click)="addGenre()" class="add-genre-btn">
+          <mat-icon>add</mat-icon>
+        </button>
+  
+        <div class="selected-genres">
+          <span *ngFor="let genre of selectedGenres" class="genre-tag mat-chip">
+            {{ genre.name }}
+            <button mat-icon-button (click)="removeGenre(genre)">
+              <mat-icon>close</mat-icon>
+            </button>
+          </span>
+        </div> 
+      </div>
+      <!-- Distance Slider (Only Enabled When Location is Selected) -->
+      <div class="distance-selection">
+        <div class="wrapper">
+          <mat-label>Distance Radius (km)</mat-label>
+          <mat-slider
+            discrete
+            min="10"
+            max="100"
+            step="10"
+            thumbLabel
+            (change)="onDistanceChange()">
+            <input matSliderThumb [(ngModel)]="selectedDistance" [disabled]="!locationSelected">
+          </mat-slider>
+        </div>
+        <span *ngIf="locationSelected">{{ selectedDistance }} km</span>
+      </div>
+
+      <div class="order-selection">
+        <mat-form-field appearance="outline" class="custom-select">
+          <mat-label>Order By</mat-label>
+          <mat-select [(value)]="selectedOrderBy" (selectionChange)="onOrderByChange()">
+            <mat-option [value]="undefined"></mat-option>
+            <mat-option *ngFor="let order of orderByOptions" [value]="order.toLocaleLowerCase()">
+              {{ order }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      
+        <mat-form-field appearance="outline" class="custom-select">
+          <mat-label>Sort Order</mat-label>
+          <mat-select [(value)]="selectedSortOrder" [disabled]="!selectedOrderBy" (selectionChange)="onSortOrderChange()">
+            <mat-option value="asc">Ascending</mat-option>
+            <mat-option value="desc">Descending</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>     
     </div>
   </div>
+
   <ng-content></ng-content>
 </app-sidebar>
- 
